# stdd

./: .gitignore  AGENTS.md  AI_CODING_METHODOLOGY_COMPARISON.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  EXTENDING.md  LICENSE  OPERATIONS.md  README.md  README_EN.md  STDD.md  STDD_ANCHORING.md  STDD_BEYOND_CODE.md  STDD_VERSION_HISTORY.md  STDD_WHITEPAPER_V2.9_CN.md  STDD_WHITEPAPER_V2.9_CN_AI.md  STDD_WHITEPAPER_V2.9_EN.md  STDD_WHITEPAPER_V2.9_EN_AI.md  TROUBLESHOOTING.md  V2.5_FEATURES.md  V2.8_VS_V2.5_COMPARISON.md  V2.9_FEATURES.md  V2.9_PLAN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/memory/: finance-knowledge-base.md
.stdd/: config.yaml  version.yaml
.stdd/config.d/: experience.yaml  gates.yaml  lite.yaml  long_range.yaml  project.yaml  quality.yaml
.stdd/experiences/: .experience-index.yaml  EXP-2026-0001.md  EXP-2026-0002.md  EXP-2026-0003.md  EXP-2026-0004.md  EXP-2026-0005.md  EXP-2026-0006.md  EXP-2026-0007.md  EXP-2026-0008.md  EXP-2026-0009.md  EXP-2026-0010.md
.stdd/hooks/: pre-compact.py  session-end.py  session-start.py
.stdd/skills/: build.md  deliver.md  slice.md  spec.md  upgrade.md  (+2 more)
deploy/: STDD_SERVER_GUIDE.md  server-api.py
ppt/: PAPER_PUBLICATION_GUIDE.md  STDD_BEYOND_CODE_PAPER.md  STDD_BEYOND_CODE_PAPER_EN.html  STDD_BEYOND_CODE_PAPER_EN.md  beyond-code.html
review/: V2.0-review-report.md  V2.7-post-mortem.md  hermes-review-analysis.md  independent-review-report.md
stdd/: __main__.py
tests/: conftest.py  test_finder.py  test_utils.py
website/: WELCOME_DISCUSSION.md  index.html
(+391 files in other folders)
