[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stdd"
version = "2.9.3"
description = "Specification-Driven Test-Driven Development — AI 编程流程管控框架"
readme = "STDD.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "STDD Team"}
]
keywords = ["specification", "tdd", "ai-coding", "quality", "guard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.scripts]
stdd = "stdd.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["stdd*"]

[tool.setuptools.package-data]
stdd = ["**/*.yaml", "**/*.md", "**/*.json"]
